--- a/www/index.html
+++ b/www/index.html
@@ -22,38 +22,38 @@
 	        <form>
                 <ul class="nav nav-tabs" role="tablist">
                     <li role="presentation">
-                        <a href="#simple" aria-controls="home" role="tab" data-toggle="tab">Simple</a>
+                        <a href="#simple" aria-controls="simple" role="tab" data-toggle="tab">Simple</a>
                     </li>
                     <li role="presentation" class="active">
-                        <a href="#covered" aria-controls="profile" role="tab" data-toggle="tab">Pin covered</a>
+                        <a href="#covered" aria-controls="covered" role="tab" data-toggle="tab">Pin covered</a>
                     </li>
                 </ul>
                 <div class="tab-content" style="margin-top:15px;">
                     <div role="tabpanel" class="tab-pane fade" id="simple">
                         <div class="form-group">
-	                        <label>Distance from pin [cm]</label>
-	                        <input type="number" step="0.1" class="form-control fromPin" id="fromPin" placeholder="0.0">
+	                        <label>Distance from pin [mm]</label>
+	                        <input type="number" step="1" class="form-control fromPin" id="fromPin" placeholder="0">
 	                    </div>          
 	            
-                        <a href="javascript:void(0);" type="submit" 
-                           onclick="SimpleLSDCalculation();" class="btn btn-default btn-primary pull-right">Calculate</a>
-	                    <a href="javascript:void(0);" type="submit" 
-                           onclick="ResetAll();" class="btn btn-default">Reset</a>
+                        <a href="javascript:void(0);" onclick="SimpleLSDCalculation();" 
+                           class="btn btn-default btn-primary pull-right">Calculate</a>
+	                    <a href="javascript:void(0);" onclick="ResetAll();" 
+                           class="btn btn-default">Reset</a>
                     </div>
                     <div role="tabpanel" class="tab-pane active fade in" id="covered">
                                          
 	                    <div class="form-group">
-	                        <label>Distance from 6 o'clock [cm]</label>
-	                        <input type="number" step="0.1" class="form-control from6" id="from6" placeholder="0.0">
+	                        <label>Distance from 6 o'clock [mm]</label>
+	                        <input type="number" step="0" class="form-control from6" id="from6" placeholder="0">
 	                    </div>
 	                    <div class="form-group">
-	                        <label>Distance from 3 o'clock [cm]</label>
-	                        <input type="number" step="0.1" class="form-control from3" id="from3" placeholder="0.0">
+	                        <label>Distance from 3 o'clock [mm]</label>
+	                        <input type="number" step="0" class="form-control from3" id="from3" placeholder="0">
 	                    </div>
-        	            <a href="javascript:void(0);" type="submit" 
-                           onclick="StartLSDCalculaton();" class="btn btn-default btn-primary pull-right">Calculate</a>
-	                    <a href="javascript:void(0);" type="submit" 
-                           onclick="ResetAll();" class="btn btn-default">Reset</a>
+        	            <a href="javascript:void(0);" onclick="StartLSDCalculaton();" 
+                           class="btn btn-default btn-primary pull-right">Calculate</a>
+	                    <a href="javascript:void(0);" onclick="ResetAll();" 
+                           class="btn btn-default">Reset</a>
                     </div>
                 </div>
 
@@ -62,7 +62,7 @@
 	        <table style="width: 100%;">
 	            <tr>
 	                <td style="text-align: center; vertical-align: middle;">
-	                    <h2 id="resultLabel"></h2>
+	                    <h2 id="resultLabel">...</h2>
                         <canvas id="sheet" width="400" height="400"></canvas>
    	                </td>
 	            </tr>
@@ -72,6 +72,7 @@
   </div>
   <script src="scripts/jquery-2.1.4.min.js"></script>
   <script src="scripts/bootstrap.min.js"></script>
+  <script src="scripts/jquery.doubletap.js"></script>
   <script src="scripts/lsdcalc.js" type="text/javascript"></script>
   </body>
 </html>
